# MissionControl

./: .env.example  Makefile  README.md  pyproject.toml
docs/: ARCHITECTURE.md
mission_control/: __init__.py  cli.py  config.py  db.py  digest.py  kimi.py  models.py  ollama.py  router.py  runner.py  telegram.py  tools.py  vault.py
tests/: test_manager_schema.py  test_router.py  test_vault.py
